--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,5 @@ dependencies = [
     "mlb-statsapi>=1.9.0",
     "pymlb-statsapi>=1.4.3",
     "python-mlb-statsapi>=0.7.1",
+    "pywin32>=311",
 ]
